Fix of side menu overflow

--- a/src/app/components/navigation/_for/_side-menu/navigation_for_side-menu.scss
+++ b/src/app/components/navigation/_for/_side-menu/navigation_for_side-menu.scss
@@ -1,4 +1,6 @@
 .navigation_for_side-menu {
+  position: relative;
+
   .navigation__title {
     @include visually-hidden;
   }
